; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/win32/kernel32/notificationtest/extr_notificationtest.c__tmain.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/win32/kernel32/notificationtest/extr_notificationtest.c__tmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"Usage: %s <dir>\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_tmain(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  store i32 %0, i32* %4, align 4
  store i32** %1, i32*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 2
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = call i32 @TEXT(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %10 = load i32**, i32*** %5, align 8
  %11 = getelementptr inbounds i32*, i32** %10, i64 0
  %12 = load i32*, i32** %11, align 8
  %13 = call i32 @_tprintf(i32 %9, i32* %12)
  store i32 -1, i32* %3, align 4
  br label %19

14:                                               ; preds = %2
  %15 = load i32**, i32*** %5, align 8
  %16 = getelementptr inbounds i32*, i32** %15, i64 1
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @WatchDirectory(i32* %17)
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %14, %8
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @_tprintf(i32, i32*) #1

declare dso_local i32 @TEXT(i8*) #1

declare dso_local i32 @WatchDirectory(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
